# LocalAiEngineTester

./: .gitignore  .gitmodules  GetTFliteModel.md  LICENSE  Learn.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/zure/localaienginetester/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zure/localaienginetester/: LocalAIEngineTesterApplication.kt  MainActivity.kt
app/src/main/java/com/zure/localaienginetester/base/: BaseViewModel.kt  LocalProviders.kt  UiEvent.kt  UiState.kt  ViewModelExt.kt
app/src/main/java/com/zure/localaienginetester/config/: InferenceConfigPresets.kt
app/src/main/java/com/zure/localaienginetester/di/: AIEngineModule.kt  AppModule.kt  DatabaseModule.kt  NetworkModule.kt
app/src/main/java/com/zure/localaienginetester/engine/: SherpaOnnxTtsEngineFactory.kt
app/src/main/java/com/zure/localaienginetester/navigation/: AppNavigation.kt  Route.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/zure/localaienginetester/: ExampleUnitTest.kt
camera/analysis/: README.md  build.gradle.kts
camera/analysis/src/main/cpp/: CMakeLists.txt  native_preprocessor.cpp
core/: build.gradle.kts
core/tts/: README.md  build.gradle.kts
engines/llama/: build.gradle.kts
engines/llama/src/main/cpp/: CMakeLists.txt  README.md  llama_jni.cpp
engines/onnxruntime/: build.gradle.kts
engines/tflite/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sherpa-onnx-tts/: .gitignore  README.md  build.gradle.kts
sherpa-onnx-tts/bundle-kokoro/: README.md  build.gradle.kts
sherpa-onnx-tts/sherpa-onnx-aar/: build.gradle.kts
(+118 files in other folders)
